--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.3",
+    "@apollo/client": "^3.11.4",
     "@clerk/clerk-react": "^5.4.1",
+    "@clerk/elements": "^0.14.0",
     "@graphql-codegen/typescript": "^4.0.9",
     "@graphql-codegen/typescript-operations": "^4.2.3",
     "@graphql-codegen/typescript-react-apollo": "^4.3.0",
+    "@kinde-oss/kinde-auth-react": "^4.0.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -23,8 +25,8 @@
     "lucide-react": "^0.424.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.26.0",
+    "react-query": "^3.39.3",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
