--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,12 @@
     "clsx": "^2.1.1",
     "graphql": "^16.9.0",
     "lucide-react": "^0.424.0",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "4.3.3",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
